# zhiyou-jingxing

./: .gitignore  README.md  check_apis.py  check_apis2.py  check_classifier.py
deploy/: .env.example  docker-compose.yml
dify/: docker-compose.yaml
dify/nginx/: docker-entrypoint.sh  nginx.conf.template
dify/ssrf_proxy/: docker-entrypoint.sh  squid.conf.template
docs/: 总体设计.md  改进建议.md  部署手册.md
frontend-admin/: index.html  nginx.conf  package-lock.json  package.json
frontend-admin/src/: api.js  (+2 more)
frontend-dashboard/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend-tourist/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
livetalking/: docker-compose.yml
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: main.py
orchestrator/app/api/: admin.py  analytics.py  chat.py  route.py
orchestrator/app/core/: config.py  database.py  logger.py  security.py
orchestrator/app/schemas/: __init__.py
orchestrator/app/services/: asr_funasr.py  audio_transcode.py  dialogue_tagger.py  dify_client.py  kg_planner.py  kg_repo.py  livetalking_client.py  llm_client.py  pref_analyzer.py  scheduler.py  sentiment.py  tts_cosyvoice.py  tts_doubao.py  tts_edge.py  tts_fish.py  tts_storage.py
orchestrator/data/avatars_vrm/guzhuang_female_01/: meta.json
orchestrator/data/kb/: faq.md  liuyuan.md  zhuozhengyuan.md
orchestrator/data/kg/: liuyuan.json  zhuozhengyuan.json
orchestrator/scripts/: build_kg.py  clean_garbled_messages.py
orchestrator/tests/: test_kg_planner.py  test_sentiment.py
(+28 files in other folders)
